# tetris-cpp

./: .gitignore  meson.build
App/: meson.build
App/assets/sprites/: blocks_atlas.json  font_atlas.json  playfields_atlas.json
App/src/: AppLayer.cpp  AppLayer.h  Game.cpp  Game.h  Main.cpp  MenuLayer.cpp  MenuLayer.h  Playfield.h  PlayfieldCell.h
Core/: meson.build
Core/include/: Application.h  Core.h  Font.h  FontRegistry.h  KeyCodes.h  Layer.h  Log.h  MouseCodes.h  Renderer.h  Serializers.h  SpriteLoader.h  Texture.h  Timer.h  Window.h  pch.h
Core/include/Events/: BaseEvent.h  Event.h  InputEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Core/include/UI/: Button.h  Color.h  Text.h
Core/src/: Application.cpp  Font.cpp  FontRegistry.cpp  KeyCodeAdapter.cpp  KeyCodeAdapter.h  Layer.cpp  Log.cpp  MouseCodeAdapter.cpp  MouseCodeAdapter.h  Renderer.cpp  Serializers.h  SpriteLoader.cpp  Texture.cpp  Timer.cpp  Window.cpp
Core/src/Events/: Event.cpp  EventAdapter.cpp  EventAdapter.h
Core/src/UI/: Color.cpp  ColorAdapter.h  PointAdapter.h  RectAdapter.h  Text.cpp
assets/sprites/: blocks_atlas.json  font_atlas.json  playfields_atlas.json
include/: Log.h  Renderer.h  Serializers.h  Size.h  SpriteAtlas.h  SpriteLoader.h  Spritesheet.h  Window.h
src/: Log.cpp  Renderer.cpp  SpriteLoader.cpp  Spritesheet.cpp  Window.cpp  main.cpp
subprojects/: spdlog.wrap
tests/: ExampleTests.cpp
